Added graphql package for easier retrieval. Updated templates. Working blog pages.

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,6 +1,7 @@
 ---
-const { title, url } = Astro.props;
+const { title, slug } = Astro.props;
+console.log('props', Astro.props)
 ---
 
 
-<li><a href={url}>{title}</a></li>
+<li><a href={`/blog/${slug}`}>{title}</a></li>
