--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ import Social from "./Social.astro";
 </style>
 
 <footer>
-    <Social platform="twitter" username="astrodotbuild" />
+    <!-- <Social platform="twitter" username="astrodotbuild" /> -->
     <Social platform="github" username="patcherkdev" />
     <!-- <Social platform="youtube" username="astrodotbuild" /> -->
 </footer>
