--- a/src/layouts/CarPost.astro
+++ b/src/layouts/CarPost.astro
@@ -1,13 +1,17 @@
 ---
-// import type { CollectionEntry } from 'astro:content';
-// import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import BaseLayout from "./BaseLayout.astro";
 
-// type Props = CollectionEntry<'cars'>['data'];
-
-const { title, description, pubDate, updatedDate } = Astro.props;
+const {
+	title,
+	description,
+	pubDate,
+	article,
+	make,
+	model,
+	year,
+	country,
+	carMainImage,
+} = Astro.props;
 ---
 
 <html lang="en">
@@ -51,36 +55,52 @@ const { title, description, pubDate, updatedDate } = Astro.props;
 			.last-updated-on {
 				font-style: italic;
 			}
+			img {
+				max-width: 100%;
+			}
+			article img {
+				max-width: 100% !important;
+				height: auto !important;
+			}
 		</style>
+		<title>{`${title} | The Quirky Lego Car Blog`}</title>
 	</head>
 
 	<body>
 		<!-- <Header /> -->
-		<main>
-			<article>
-				<!-- <div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div> -->
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<!-- <FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							} -->
+		<BaseLayout pageTitle={'The Quirky Lego Car Blog'}>
+			<main>
+				<article>
+					<!-- <div class="hero-image">
+						{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
+					</div> -->
+					<div class="prose">
+						<div class="title">
+							<div class="date">
+								<!-- <FormattedDate date={pubDate} />
+								{
+									updatedDate && (
+										<div class="last-updated-on">
+											Last updated on <FormattedDate date={updatedDate} />
+										</div>
+									)
+								} -->
+							</div>
+							<h1>{title}</h1>
+							<hr />
+							<p>{description}</p>
 						</div>
-						<h1>{title}</h1>
-						<hr />
-                        <p>{description}</p>
+						<slot />
+						{
+							carMainImage && carMainImage.url && (
+								<img src={carMainImage.url} />
+							)
+						}
+						<article set:html={article.html} />
 					</div>
-					<slot />
-				</div>
-			</article>
-		</main>
-		<Footer />
+				</article>
+			</main>
+		</BaseLayout>
+		<!-- <Footer /> -->
 	</body>
 </html>
