--- a/src/pages/carBlog.astro
+++ b/src/pages/carBlog.astro
@@ -26,7 +26,7 @@ const response = await fetch(import.meta.env.HYGRAPH_ENDPOINT, query);
 const json = await response.json();
 const posts: Post[] = json.data.cars;
 
-console.log('cars: ', posts)
+// console.log('cars: ', posts)
 ---
 
 
