--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,5 @@ const pageTitle = "Home Page";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <h2>Quirky and Neat cars, built with Lego.</h2>
-  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+  <!-- <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} /> -->
 </BaseLayout>
