--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 import { Markdown } from "astro-remote";
 
 const frontmatter = Astro.props;
-// const { Content } = await frontmatter.car.article.markdown.render()
+console.log('car?', frontmatter)
 ---
 
 <style>
@@ -12,10 +12,13 @@ const frontmatter = Astro.props;
     height: auto;
     padding: 1rem;
   }
+  .publishDate {
+    font-style: italic;
+  }
 </style>
 
 <BaseLayout pageTitle={frontmatter.car.title}>
-  <!-- <p>{frontmatter.car.pubDate.toString().slice(0, 10)}</p> -->
+  
   {
     frontmatter.car.carMainImage && frontmatter.car.carMainImage.url ? (
       <img
@@ -25,6 +28,7 @@ const frontmatter = Astro.props;
       />
     ) : null
   }
+  <p class="publishDate">Published: {frontmatter.car.pubDate.toString().slice(0, 10)}</p>
   <p><em>{frontmatter.car.description}</em></p>
   <hr />
   <!-- <p>Written by: {frontmatter.author}</p> -->
